--- a/file.ipynb
+++ b/file.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Locate the district select element by its ID\n",
     "district_select = Select(driver.find_element(By.ID, 'districtID'))\n",
-    "district_select.select_by_value(\"13\") # Select a district by its value (replace \"13\" with the value you want to select)"
+    "district_select.select_by_value(\"13\") # Select a district by its value (replace \"13\" [Adilabad] with the value you want to select)"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "# Locate the mandal select element by its ID\n",
     "mandaid = Select(driver.find_element(By.ID,\"mandalID\"))\n",
-    "mandaid.select_by_value(\"261\") # Select a mandal by its value (replace \"261\" with the value you want to select)"
+    "mandaid.select_by_value(\"261\") # Select a mandal by its value (replace \"261\" [Adilabad] with the value you want to select)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "# Locate the village select element by its ID\n",
     "villageid = Select(driver.find_element(By.ID,\"villageId\"))\n",
-    "villageid.select_by_value(\"1301023\") # Select a village by its value (replace \"1301023\" with the value you want to select)"
+    "villageid.select_by_value(\"1301023\") # Select a village by its value (replace \"1301023\" [Ankapoor] with the value you want to select)"
    ]
   },
   {
